--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "license": "ISC",
   "dependencies": {
     "cheerio": "^1.0.0-rc.2",
+    "ejs": "^2.6.1",
+    "express": "^4.16.4",
     "mongoose": "^5.3.15",
     "puppeteer": "^1.11.0",
     "request": "^2.88.0",
