--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   "license": "ISC",
   "dependencies": {
     "cheerio": "^1.0.0-rc.2",
+    "cookie-parser": "^1.4.3",
     "ejs": "^2.6.1",
     "express": "^4.16.4",
     "mongoose": "^5.3.15",
     "puppeteer": "^1.11.0",
+    "query-string": "^6.2.0",
     "request": "^2.88.0",
     "request-promise": "^4.2.2"
   }
